# BitonicSortOpenCL

./: CMakeLists.txt  README.md
.github/: lsan.supp
.github/workflows/: ci.yml
cmake/: BitonicDependencies.cmake
docs/: gen_benchmark.py  gen_network.py
kernels/: bitonic.cl
src/: bitonic_runner.cpp  bitonic_runner.hpp  main.cpp  ocl_config.hpp  opencl_runtime.cpp  opencl_runtime.hpp
tests/: test_bitonic.cpp  test_opencl_runtime.cpp
tests/e2e/: 009.ans  010.ans  011.ans  012.ans  013.ans  014.ans  015.ans  016.ans  017.ans  018.ans  019.ans  020.ans  021.ans  022.ans  024.ans  generate_tests.py  run_all.sh
tests/unit/: test_bitonic_runner.cpp  test_opencl_runtime.cpp
